# mileagetracker

./: Cargo.toml  README.md  vehicles.db
src/: main.rs
templates/: base.html  index.html
templates/partials/: milage_form.html
